added some changes in home.jsx page

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ a {
     color: #111;
 }
 
+h1.home {
+    background: dodgerblue;
+    color: #fff;
+}
+
 h1 {
     font-family: montserrat;
     text-align: center;
