--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,6 @@ h2 {
 p{
     color: red;
     text-align: center;
-    font-weight: 500;
-    font-size: medium !important;
+    font-weight: 800;
+    font-size: 1.5rem;
 }
